@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.383 2003-03-04 19:24:59 castaglia Exp $
+$Id: NEWS,v 1.384 2003-03-04 19:28:26 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -7,6 +7,7 @@ CVS
   configuration files.  Now, when starting, mod_sql_mysql will read .cnf
   files for "proftpd" and "client" sections.
 - Bug 1960 - Add removed file size by DELE command to xferlog.
+- Bug 1967 - Add display of uptime to ftpwho, ftptop.
 
 1.2.8 - Released 04-Mar-2003
 ---------------------------------
